# schema

./: .gitignore  MANIFEST.in  Makefile  README.md  createindex.py  index.html  pyproject.toml
.github/workflows/: static.yml
html/: index.html
src/spebtschema/: __init__.py
src/spebtschema/v1/: FOV.json  detector.json
src/spebtschema/yaml/: __init__.py  _validator.py
v1/: FOV.json  detector.json  main.json  pymatcal_main.json  relation.json  transformation_data.json
